--- a/.github/workflows/qodana-analysys.yml
+++ b/.github/workflows/qodana-analysys.yml
@@ -133,6 +133,7 @@ jobs:
           # push-fixes: pull-request
 
       - uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: qodana-results
           path: ${{ runner.temp }}/qodana/results
