--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -379,6 +379,6 @@ jobs:
       run: |
         if [ -e /tmp/busted-tests-failed ]
         then
-          echo "Lua tests failed - see the action above for detailed output."
+          echo "Lua tests failed - see the action called 'Run Lua tests' above for detailed output."
           exit 1
         fi
