--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -127,6 +127,9 @@ jobs:
         # these aren't available or don't work well in vcpkg
         brew install libzzip libzip ccache luarocks expect mitchellh/gon/gon
 
+        # update cmake to a version that supports minimum required
+        brew install cmake
+
         echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
         echo "CCACHE_DIR=${{runner.workspace}}/ccache" >> $GITHUB_ENV
 
