Infrastructure: remove AppVeyor and other unused CI/CB files
Since we are abandoning the use of AppVeyor and putting all our CI/CB eggs
in a Git Hub Actions basket we should remove the files that are not now
needed for it. There are also some other files that are not useful anymore
and yet some others that should be listed in the Qmake project file so they
can be searched/seen in Qt Creator if used for qmake builds.

Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,8 +115,8 @@ endif()
 # APP_BUILD is going away (it is not currently used in the source code now as
 # Mudlet instead reads it from the resource file) however until the CI/CB system
 # is cleaned up to not use it in any way in the
-# /CI/(travis|appveyor).validate_deployment.(sh|ps1) scripts we probably have to
-# leave it in place:
+# /CI/travis.validate_deployment.sh script we probably have to leave it in
+# place:
 #
 # IMPORTANT: To insure consistency please ensure the SAME of the first two
 # values are also assigned to the "VERSION" and "BUILD" variables in the native
