Cache MSYS2 packages

--- a/.github/workflows/build-mudlet-win.yml
+++ b/.github/workflows/build-mudlet-win.yml
@@ -40,6 +40,30 @@ jobs:
       with:
         msystem: MINGW64
         update: true
+        install: >-
+          mingw-w64-i686-qt6-base
+          mingw-w64-i686-qt6-multimedia
+          mingw-w64-i686-qt6-svg
+          mingw-w64-i686-qt6-speech
+          mingw-w64-i686-qt6-imageformats
+          mingw-w64-i686-qt6-tools
+          mingw-w64-i686-qt6-5compat
+          mingw-w64-i686-qtkeychain-qt6
+          mingw-w64-i686-ccache
+          mingw-w64-i686-toolchain
+          mingw-w64-i686-pcre
+          mingw-w64-i686-libzip
+          mingw-w64-i686-ntldd
+          mingw-w64-i686-pugixml
+          mingw-w64-i686-lua51
+          mingw-w64-i686-lua51-lpeg
+          mingw-w64-i686-lua51-lsqlite3
+          mingw-w64-i686-hunspell
+          mingw-w64-i686-zlib
+          mingw-w64-i686-boost
+          mingw-w64-i686-yajl
+          mingw-w64-i686-lua-luarocks
+          mingw-w64-i686-jq
 
     - name: (Windows 32) Setup MSYS2
       if: matrix.buildname == 'windows32'
@@ -47,6 +71,29 @@ jobs:
       with:
         msystem: MINGW32
         update: true
+        install: >-
+          mingw-w64-x86_64-qt5-base
+          mingw-w64-x86_64-qt5-multimedia
+          mingw-w64-x86_64-qt5-svg
+          mingw-w64-x86_64-qt5-speech
+          mingw-w64-x86_64-qt5-imageformats
+          mingw-w64-x86_64-qt5-winextras
+          mingw-w64-x86_64-qt5-tools
+          mingw-w64-x86_64-ccache
+          mingw-w64-x86_64-toolchain
+          mingw-w64-x86_64-pcre
+          mingw-w64-x86_64-libzip
+          mingw-w64-x86_64-ntldd
+          mingw-w64-x86_64-pugixml
+          mingw-w64-x86_64-lua51
+          mingw-w64-x86_64-lua51-lpeg
+          mingw-w64-x86_64-lua51-lsqlite3
+          mingw-w64-x86_64-hunspell
+          mingw-w64-x86_64-zlib
+          mingw-w64-x86_64-boost
+          mingw-w64-x86_64-yajl
+          mingw-w64-x86_64-lua-luarocks
+          mingw-w64-x86_64-jq
 
     - name: (Windows) Build Environment Setup
       shell: msys2 {0}
