Install GDB earlier to ensure xvfb's 'Command: ' is the same as the working version

--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -105,7 +105,8 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # gettext is needed for vcpkg
-        sudo apt-get install gettext -y
+        # gdb for running in debugger later on
+        sudo apt-get install gettext gdb -y
 
     - name: Restore from cache and run vcpkg
       uses: lukka/run-vcpkg@v7
@@ -374,9 +375,7 @@ jobs:
       timeout-minutes: 5
       uses: GabrielBB/xvfb-action@v1.6
       with:
-        run: |
-          sudo apt-get install gdb
-          gdb -batch -ex "run" -ex "bt full" --args ${{github.workspace}}/src/mudlet --profile 'Mudlet self-test' --mirror
+        run: gdb -batch -ex "run" -ex "bt full" --args ${{github.workspace}}/src/mudlet --profile 'Mudlet self-test' --mirror
       env:
         AUTORUN_BUSTED_TESTS: 'true'
         TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
