--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -354,24 +354,11 @@ jobs:
         sudo codesign --remove-signature ${{env.UPLOAD_FILENAME}}.app
       shell: bash
 
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-      with:
-        limit-access-to-actor: true
-
     - name: (Linux) Run Lua tests
       if: matrix.run_tests == 'true' && runner.os == 'Linux'
       timeout-minutes: 5
-      run: xvfb-run ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
-      env:
-        AUTORUN_BUSTED_TESTS: 'true'
-        TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
-        QUIT_MUDLET_AFTER_TESTS: 'true'
-
-    - name: (Linux) Run Lua tests (GDB)
-      if: matrix.run_tests == 'true' && runner.os == 'Linux'
-      timeout-minutes: 5
-      run: xvfb-run gdb -batch -ex "run" -ex "bt full" --args ${{github.workspace}}/src/mudlet --profile 'Mudlet self-test' --mirror
+      # using quit 0 ensures that GDB exits without an error code of 1 when there is no backtrace available after executing the "bt full" command when run via xvfb-run
+      run: xvfb-run --auto-servernum gdb --batch -ex "run" -ex "bt full" -ex "quit 0" --args ${{github.workspace}}/src/mudlet --profile 'Mudlet self-test' --mirror
       env:
         AUTORUN_BUSTED_TESTS: 'true'
         TESTS_DIRECTORY: ${{github.workspace}}/src/mudlet-lua/tests
