--- a/.github/workflows/performance-analysis.yml
+++ b/.github/workflows/performance-analysis.yml
@@ -34,7 +34,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install build-essential git liblua5.1-dev zlib1g-dev libhunspell-dev libpcre3-dev \
           libzip-dev libboost-graph-dev libyajl-dev libpulse-dev lua-rex-pcre lua-filesystem lua-zip \
-          lua-sql-sqlite3 qtmultimedia5-dev qttools5-dev luarocks ccache libpugixml-dev cmake ninja-build -y
+          lua-sql-sqlite3 qtmultimedia5-dev qttools5-dev luarocks ccache libpugixml-dev cmake ninja-build
+          xvfb -y
 
         sudo luarocks install luautf8
         sudo luarocks install lua-yajl YAJL_LIBDIR=`find /usr -name "libyajl.so" -printf '%h\n'` YAJL_INCDIR=/usr/include
@@ -73,9 +74,7 @@ jobs:
 
     - name: Run display benchmark 1
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -91,9 +90,7 @@ jobs:
 
     - name: Run display benchmark 2
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -109,9 +106,7 @@ jobs:
 
     - name: Run display benchmark 3
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -127,9 +122,7 @@ jobs:
 
     - name: Run display benchmark 4
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -145,9 +138,7 @@ jobs:
 
     - name: Run display benchmark 5
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -163,9 +154,7 @@ jobs:
 
     - name: Run display benchmark 6
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -181,9 +170,7 @@ jobs:
 
     - name: Run display benchmark 7
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
@@ -199,9 +186,7 @@ jobs:
 
     - name: Run display benchmark 8
       timeout-minutes: 3
-      uses: GabrielBB/xvfb-action@v1.6
-      with:
-        run: ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
+      run: xvfb-run --auto-servernum ${{github.workspace}}/src/mudlet --profile "Mudlet self-test" --mirror
       env:
         AUTORUN_DISPLAY_BENCHMARK: 'true'
         COMMIT_DATE: ${{ steps.commitdate.outputs.date }}
